# conformer-acr

./: .gitignore  README.md  chord_analysis.py  diagnose.py  evaluate.py  mutate.py  prep_dataset.py  pyproject.toml  render_hybrid.py  requirements.txt  submit_data_prep.sh  submit_eval.sh  submit_train.sh  train.py
conformer_acr/: __init__.py  config.py  core.py
conformer_acr/data/: __init__.py  dataset.py  preprocess.py
conformer_acr/models/: __init__.py  conformer.py
conformer_acr/theory/: __init__.py  vocabulary.py
conformer_acr/training/: __init__.py  losses.py  trainer.py
conformer_acr/utils/: __init__.py  distributed.py
lit_review/: batch_chord_analysis.py  chord_analysis.py  master_evaluation.py  per_track_results.csv  requirements.txt  sensitivity_analysis.py
lit_review/source/: gen_results.py
tests/: mock_midi_generator.py  test_losses.py  test_mutate.py  test_training_integration.py
