[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "conformer-acr"
version = "0.1.0"
description = "Conformer-based Automatic Chord Recognition for N8 CIR"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  {name = "Facundo Franchino", email = "jbv513@york.ac.uk"}
]
dependencies = [
    "torch>=1.9.0",
    "torchaudio>=0.9.0",
    "numpy",
    "scipy",
    "librosa",
    "pandas",
    "mir_eval",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8"
]

[tool.setuptools.packages.find]
where = ["."]
